// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.getEnricherOrDieTryin by default 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with api error 1`] = `
Object {
  "exception": Object {
    "type": "SparkpostApiError",
  },
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with chunk loading error 1`] = `
Object {
  "exception": Object {
    "values": Array [
      Object {
        "value": "Loading chunk 4 failed.",
      },
    ],
  },
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with current user 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": 123,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {
    "access_level": "admin",
    "customer": 123,
    "username": "test-user",
  },
}
`;

exports[`.getEnricherOrDieTryin with document language 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "af",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with email verification token 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": Object {
    "headers": undefined,
    "url": "https://not-a-real-tenant.example.com/account/email-verification/[FILTERED]",
  },
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with error from our bundle 1`] = `
Object {
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "filename": "sparkpost.com/static/js/bundle.js",
              "function": "test",
            },
          ],
        },
      },
    ],
  },
  "level": "error",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "2web2ui",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with navigator language 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "en-US",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with other request fields 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": Object {
    "headers": Object {
      "Referer": "https://not-a-real-tenant.example.com/nice-route",
      "User-Agent": "Probably not Mozilla really",
    },
    "url": "https://not-a-real-tenant.example.com/nice-route",
  },
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with password reset token 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": Object {
    "headers": undefined,
    "url": "https://not-a-real-tenant.example.com/reset-password/[FILTERED]",
  },
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with referer header 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": Object {
    "headers": Object {
      "Referer": "https://not-a-real-tenant.example.com/account/email-verification/[FILTERED]",
      "User-Agent": "Probably not Mozilla really",
    },
    "url": "https://not-a-real-tenant.example.com/account/email-verification/[FILTERED]",
  },
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with referrer header 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": Object {
    "headers": Object {
      "Referer": "https://not-a-real-tenant.example.com/account/email-verification/[FILTERED]",
      "User-Agent": "Probably not Mozilla really",
    },
    "url": "https://not-a-real-tenant.example.com/account/email-verification/[FILTERED]",
  },
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with tags 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
    "tenant": "test",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin without headers 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "request": Object {
    "headers": undefined,
    "url": "https://not-a-real-tenant.example.com/nice-route",
  },
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin without request object 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "otherField": "blue",
  "request": undefined,
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;
